@@ -1,6 +1,7 @@
 devscripts (2.10.36) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * debsign: When copying .changes files from a remote host, attempt to process
+    each copied file if a wildcard was used in the filename (Closes: #491627)
 
  -- Adam D. Barratt <adam@adam-barratt.org.uk>  Mon, 28 Jul 2008 20:06:49 +0100
 
